# FlipperZeroEsp32

./: README.md  sdkconfig
components/applications/services/desktop/animations/: animation_manager.c
components/applications/services/desktop/animations/views/: bubble_animation_view.c  one_shot_animation_view.c
components/applications/services/gui/: canvas.c
components/applications/services/notification/: notification_app.c
components/furi/furi-hal-config/: furi_config.h
components/furi/furi-hal-esp32/src-esp32/: furi_hal_resources.c
components/furi/furi/core/: common_defines.h  log.c  thread.c  timer.c
components/toolbox/: CMakeLists.txt
components/u8g2/: CMakeLists.txt
components/u8g2-esp32-hal/: u8g2_esp32_hal.c  u8g2_esp32_hal.h
